--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "date-fns": "^2.22.1",
+    "fs": "0.0.1-security",
+    "graphql": "^15.5.1",
+    "graphql-request": "^3.4.0",
     "gray-matter": "^4.0.3",
+    "jquery": "^3.6.0",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
