--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "sass": "^1.35.2"
+  },
+  "devDependencies": {
+    "@types/node": "^16.7.2",
+    "@types/react": "^17.0.19",
+    "typescript": "^4.4.2"
   }
 }
